2010-11-02 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Ssh.py: Fix missing ev_start trigger when using task.copy() (trac
	ticket #125).

2010-11-01 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Make -c/--copy an option that can take several
	source arguments.

	* CLI/Clush.py: Improve signal handling (trac ticket #65).

2010-10-25 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Add launched-in-background checks before enabling user
	interaction (fix trac ticket #114).

2010-10-20 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Docstring improvements (trac tickets #120, #122).

2010-10-20 A. Degremont <aurelien.degremont@cea.fr>

	* NodeSet.py: Optimize NodeSetBase iteration.

2010-10-17 S. Thiell <stephane.thiell@cea.fr>

	* Engine/Factory.py: Re-enable EPoll engine (closes trac ticket #56).

	* Engine/EPoll.py: Cleanup and minor fix in the way event masks are
	modified.

	* CLI/Clush.py: Changed the way of reading stdin, which is now based on
	blocking reads using a specified thread and thread-safe messaging with
	acknowledgement using a task port (part of trac ticket #56).

2010-10-11 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Worker.py: Add Worker.abort() base method and ensure proper
	implementation in all workers (trac ticket #63).

2010-10-10 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Worker.py: WorkerBadArgumentError exception is now
	deprecated, use ValueError instead. Also added exception message in
	each worker (trac ticket #116).

2010-10-01 A. Degremont <aurelien.degremont@cea.fr>

	* Task.py: Add Task.run() new method (trac ticket #119).

2010-09-28 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Do not allow option value starting with '-' in some
	cases.

2010-09-26 S. Thiell <stephane.thiell@cea.fr>

	* CLI: Package created.

2010-09-03 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Ssh.py: Fix issue with clush -l USER by separating underlying ssh
	"-l USER" in two shell arguments (trac ticket #113).
